<resources>
    <string name="app_name">Trip Journal</string>
    <string name="trip_name">Trip Name</string>
    <string name="destination">Destination</string>
    <string name="trip_type">Trip Type</string>
    <string name="city_break">City break</string>
    <string name="seaside">Seaside</string>
    <string name="mountains">Mountains</string>
    <string name="price_eur">Price(eur)</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="rating">Rating</string>
    <string name="save">SAVE</string>
    <string name="manage_trip">Manage Trip</string>
    <string name="add_trip">+</string>
    <string name="my_trips">My Trips</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="about_us">About Us</string>
    <string name="contact">Contact</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="login_manifest">Log In</string>
    <string name="name">Name</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="sign_up">SIGN UP</string>
    <string name="add_email">Please add your email address</string>
    <string name="add_password">Please add a password</string>
    <string name="password_too_short">Please add a password with at least 6 characters</string>
    <string name="signup_error">Sign Up error</string>
    <string name="signed_up_successfully">Signed up successfully</string>
    <string name="verify_email">Verify your email</string>
    <string name="signup_manifest">Sign Up</string>
    <string name="wrong_credentials">Wrong credentials</string>
    <string name="log_out">Log Out</string>
    <string name="logout_message">Are you sure you want to log out?</string>
    <string name="logout_caps">LOG OUT</string>
    <string name="no">No</string>
    <string name="upload_photo">Upload photo</string>
    <string name="choose_from_camera">Choose from camera</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="select_start_date">Select start date</string>
    <string name="select_end_date">Select end date</string>
    <string name="permission_denied">Permission denied!</string>
    <string name="type">Type</string>
</resources>
